test/libyul/yulSyntaxTests/dot_ellipse_function_ret.yul
{
    function x() -> a...b {}
}
// ----
// TypeError 7771: (22-27): "a...b" is not a valid identifier (contains consecutive dots).
